<resources>
    <string name="app_name">Quizard</string>
    <string name="topic_one">Topic 1</string>
    <string name="topic_two">Topic 2</string>
    <string name="topic_three">Topic 3</string>
    <string name="topic_four">Topic 4</string>
    <string name="topic_five">Topic 5</string>
    <string name="questions">No. of Questions: 5</string>
    <string name="answer_a">A</string>
    <string name="answer_b">B</string>
    <string name="answer_c">C</string>
    <string name="answer_d">D</string>
    <string name="button">FINISH</string>
</resources>
