<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/my_value_4dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginBottom="@dimen/my_value_8dp"
            android:layout_marginLeft="@dimen/my_value_4dp"
            android:layout_marginRight="@dimen/my_value_4dp"
            card_view:cardCornerRadius="@dimen/my_value_8dp"
            card_view:cardElevation="@dimen/my_value_4dp">

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question_one"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_section" />
                <TextView
                    android:id="@+id/option_one"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/option_section" />

                <View
                    android:layout_marginLeft="@dimen/my_value_16dp"
                    android:layout_marginRight="@dimen/my_value_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/my_value_1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/my_value_16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_a" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_b" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_c" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_d" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginBottom="@dimen/my_value_8dp"
            android:layout_marginLeft="@dimen/my_value_4dp"
            android:layout_marginRight="@dimen/my_value_4dp"
            card_view:cardCornerRadius="@dimen/my_value_8dp"
            card_view:cardElevation="@dimen/my_value_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_section" />
                <TextView
                    android:id="@+id/option_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/option_section" />

                <View
                    android:layout_marginLeft="@dimen/my_value_16dp"
                    android:layout_marginRight="@dimen/my_value_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/my_value_1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/my_value_16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_a" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_b" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_c" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_d" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginBottom="@dimen/my_value_8dp"
            android:layout_marginLeft="@dimen/my_value_4dp"
            android:layout_marginRight="@dimen/my_value_4dp"
            card_view:cardCornerRadius="@dimen/my_value_8dp"
            card_view:cardElevation="@dimen/my_value_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question_three"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_section" />
                <TextView
                    android:id="@+id/option_three"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/option_section" />

                <View
                    android:layout_marginLeft="@dimen/my_value_16dp"
                    android:layout_marginRight="@dimen/my_value_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/my_value_1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/my_value_16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_a" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_b" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/my_value_16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_c" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_d" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginBottom="@dimen/my_value_8dp"
            android:layout_marginLeft="@dimen/my_value_4dp"
            android:layout_marginRight="@dimen/my_value_4dp"
            card_view:cardCornerRadius="@dimen/my_value_8dp"
            card_view:cardElevation="@dimen/my_value_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question_four"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/question_section" />
                <TextView
                    android:id="@+id/option_four"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/option_section" />

                <View
                    android:layout_marginLeft="@dimen/my_value_16dp"
                    android:layout_marginRight="@dimen/my_value_16dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/my_value_1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/my_value_16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_a" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_b" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/my_value_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/my_value_16dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/my_value_8dp"
                            android:text="@string/answer_c" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_d" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_marginBottom="@dimen/my_value_8dp"
        android:layout_marginLeft="@dimen/my_value_4dp"
        android:layout_marginRight="@dimen/my_value_4dp"
        card_view:cardCornerRadius="@dimen/my_value_8dp"
        card_view:cardElevation="@dimen/my_value_4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_five"
                android:layout_width="match_parent"
                android:layout_height="@dimen/question_section" />
            <TextView
                android:id="@+id/option_five"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_section" />

            <View
                android:layout_marginLeft="@dimen/my_value_16dp"
                android:layout_marginRight="@dimen/my_value_16dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/my_value_1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/my_value_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/my_value_16dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/my_value_8dp"
                        android:text="@string/answer_a" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_b" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/my_value_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/my_value_16dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/my_value_8dp"
                        android:text="@string/answer_c" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_d" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button"
        android:textSize="24sp"
        android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>
